[INJICERT-1239] feat(tests): enhance test coverage for credential configuration and authorization server services
Signed-off-by: amaydixit11 <amaydixit11@gmail.com>