@@ -38,6 +38,9 @@ public class CredentialConfigurationServiceImplTest {
     @Mock
     private CredentialConfigMapper credentialConfigMapper;
 
+    @Mock
+    private AuthorizationServerService authServerService;
+
     @InjectMocks
     private CredentialConfigurationServiceImpl credentialConfigurationService;
 
@@ -52,7 +55,7 @@ public class CredentialConfigurationServiceImplTest {
         Map<String, List<List<String>>> keyAliasMapper = new HashMap<>();
         keyAliasMapper.put("EdDSA", List.of(
                 List.of("TEST2019", "TEST2019-REF")));
-//        keyAliasMapper.put("RS256", List.of());
+        // keyAliasMapper.put("RS256", List.of());
 
         MockitoAnnotations.openMocks(this);
         credentialConfig = new CredentialConfig();
@@ -69,7 +72,8 @@ public class CredentialConfigurationServiceImplTest {
         credentialConfig.setScope("test_vc_ldp");
         credentialConfig.setCryptographicBindingMethodsSupported(List.of("did:jwk"));
         credentialConfig.setCredentialSigningAlgValuesSupported(List.of("Ed25519Signature2020"));
-        credentialConfig.setCredentialSubject(Map.of("name", new CredentialSubjectParameters(List.of(new CredentialSubjectParameters.Display("Full Name", "en")))));
+        credentialConfig.setCredentialSubject(Map.of("name",
+                new CredentialSubjectParameters(List.of(new CredentialSubjectParameters.Display("Full Name", "en")))));
         credentialConfig.setKeyManagerAppId("TEST2019");
         credentialConfig.setKeyManagerRefId("TEST2019-REF");
         credentialConfig.setSignatureCryptoSuite("Ed25519Signature2020");
@@ -80,11 +84,13 @@ public class CredentialConfigurationServiceImplTest {
         credentialConfigurationDTO.setVcTemplate("test_template");
         credentialConfigurationDTO.setCredentialFormat("ldp_vc");
         credentialConfigurationDTO.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
-        credentialConfigurationDTO.setCredentialTypes(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
+        credentialConfigurationDTO
+                .setCredentialTypes(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
         credentialConfigurationDTO.setSignatureCryptoSuite("Ed25519Signature2020");
         credentialConfigurationDTO.setKeyManagerAppId("TEST2019");
         credentialConfigurationDTO.setKeyManagerRefId("TEST2019-REF");
-        credentialConfigurationDTO.setCredentialSubjectDefinition(Map.of("name", new CredentialSubjectParametersDTO(List.of(new CredentialSubjectParametersDTO.Display("Full Name", "en")))));
+        credentialConfigurationDTO.setCredentialSubjectDefinition(Map.of("name", new CredentialSubjectParametersDTO(
+                List.of(new CredentialSubjectParametersDTO.Display("Full Name", "en")))));
 
         ReflectionTestUtils.setField(credentialConfigurationService, "credentialIssuer", "http://example.com/");
         ReflectionTestUtils.setField(credentialConfigurationService, "authUrl", "http://auth.com");
@@ -94,10 +100,15 @@ public class CredentialConfigurationServiceImplTest {
         Map<String, List<String>> credentialSigningMap = new LinkedHashMap<>();
         credentialSigningMap.put("Ed25519Signature2020", List.of("EdDSA"));
         credentialSigningMap.put("RsaSignature2018", List.of("RS256"));
-        ReflectionTestUtils.setField(credentialConfigurationService, "cryptographicBindingMethodsSupportedMap", new LinkedHashMap<>());
-        ReflectionTestUtils.setField(credentialConfigurationService, "credentialSigningAlgValuesSupportedMap", credentialSigningMap);
+        ReflectionTestUtils.setField(credentialConfigurationService, "cryptographicBindingMethodsSupportedMap",
+                new LinkedHashMap<>());
+        ReflectionTestUtils.setField(credentialConfigurationService, "credentialSigningAlgValuesSupportedMap",
+                credentialSigningMap);
         ReflectionTestUtils.setField(credentialConfigurationService, "proofTypesSupported", new LinkedHashMap<>());
         ReflectionTestUtils.setField(credentialConfigurationService, "keyAliasMapper", keyAliasMapper);
+
+        // Mock authServerService to return the expected authorization server URLs
+        when(authServerService.getAllAuthorizationServerUrls()).thenReturn(List.of("http://auth.com"));
     }
 
     @Test
@@ -109,7 +120,8 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(credentialConfig);
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(credentialConfig);
 
-        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService.addCredentialConfiguration(credentialConfigurationDTO);
+        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService
+                .addCredentialConfiguration(credentialConfigurationDTO);
 
         Assert.assertNotNull(credentialConfigResponse);
         Assert.assertNotNull(credentialConfigResponse.getId());
@@ -126,10 +138,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate(null); // or ""
 
         // Act & Assert
-        CertifyException exception = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.addCredentialConfiguration(dto)
-        );
-        org.junit.Assert.assertEquals("Credential Template is mandatory for the DataProvider plugin issuer.", exception.getMessage());
+        CertifyException exception = assertThrows(CertifyException.class,
+                () -> credentialConfigurationService.addCredentialConfiguration(dto));
+        org.junit.Assert.assertEquals("Credential Template is mandatory for the DataProvider plugin issuer.",
+                exception.getMessage());
     }
 
     @Test
@@ -137,7 +149,8 @@ public class CredentialConfigurationServiceImplTest {
         Optional<CredentialConfig> optional = Optional.of(credentialConfig);
         when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(optional);
         when(credentialConfigMapper.toDto(any(CredentialConfig.class))).thenReturn(credentialConfigurationDTO);
-        CredentialConfigurationDTO credentialConfigurationDTOResponse = credentialConfigurationService.getCredentialConfigurationById("test");
+        CredentialConfigurationDTO credentialConfigurationDTOResponse = credentialConfigurationService
+                .getCredentialConfigurationById("test");
 
         Assert.assertNotNull(credentialConfigurationDTOResponse);
         Assert.assertNotNull(credentialConfigurationDTOResponse.getCredentialTypes());
@@ -145,8 +158,10 @@ public class CredentialConfigurationServiceImplTest {
         Assert.assertNotNull(credentialConfigurationDTOResponse.getContextURLs());
         Assert.assertNotNull(credentialConfigurationDTOResponse.getVcTemplate());
         Assert.assertEquals("test_template", credentialConfigurationDTOResponse.getVcTemplate());
-        Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"), credentialConfigurationDTOResponse.getContextURLs());
-        Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"), credentialConfigurationDTOResponse.getCredentialTypes());
+        Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"),
+                credentialConfigurationDTOResponse.getContextURLs());
+        Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"),
+                credentialConfigurationDTOResponse.getCredentialTypes());
         Assert.assertEquals("ldp_vc", credentialConfigurationDTOResponse.getCredentialFormat());
     }
 
@@ -155,8 +170,8 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigRepository.findByCredentialConfigKeyId("12345678"))
                 .thenReturn(Optional.empty());
 
-        CredentialConfigException exception = assertThrows(CredentialConfigException.class, () ->
-                credentialConfigurationService.getCredentialConfigurationById("12345678"));
+        CredentialConfigException exception = assertThrows(CredentialConfigException.class,
+                () -> credentialConfigurationService.getCredentialConfigurationById("12345678"));
 
         assertEquals("Configuration not found with the provided id: " + "12345678", exception.getMessage());
     }
@@ -165,10 +180,10 @@ public class CredentialConfigurationServiceImplTest {
     public void getCredentialConfigurationById_ConfigNotActive_ThrowsException() {
         CredentialConfig inactiveConfig = new CredentialConfig();
         inactiveConfig.setStatus("inactive"); // Not Constants.ACTIVE
-        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString())).thenReturn(Optional.of(inactiveConfig));
-        CertifyException exception = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.getCredentialConfigurationById("test-id")
-        );
+        when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
+                .thenReturn(Optional.of(inactiveConfig));
+        CertifyException exception = assertThrows(CertifyException.class,
+                () -> credentialConfigurationService.getCredentialConfigurationById("test-id"));
         assertEquals("Configuration not active.", exception.getMessage());
     }
 
@@ -185,10 +200,8 @@ public class CredentialConfigurationServiceImplTest {
         mockCredentialConfig.setSdJwtVct("test-vct");
         mockCredentialConfig.setSignatureAlgo("ES256");
 
-
         Optional<CredentialConfig> optionalConfig = Optional.of(mockCredentialConfig);
         when(credentialConfigRepository.findByCredentialConfigKeyId(eq(expectedId))).thenReturn(optionalConfig);
-
 
         CredentialConfigurationDTO mockDto = new CredentialConfigurationDTO();
 
@@ -203,11 +216,13 @@ public class CredentialConfigurationServiceImplTest {
 
         // Mock the mapper methods
         when(credentialConfigMapper.toDto(any(CredentialConfig.class))).thenReturn(validationDto);
-        doNothing().when(credentialConfigMapper).updateEntityFromDto(any(CredentialConfigurationDTO.class), any(CredentialConfig.class));
+        doNothing().when(credentialConfigMapper).updateEntityFromDto(any(CredentialConfigurationDTO.class),
+                any(CredentialConfig.class));
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(mockCredentialConfig);
 
         // --- Act ---
-        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService.updateCredentialConfiguration(expectedId, mockDto);
+        CredentialConfigResponse credentialConfigResponse = credentialConfigurationService
+                .updateCredentialConfiguration(expectedId, mockDto);
 
         // --- Assert ---
         Assert.assertNotNull(credentialConfigResponse);
@@ -228,8 +243,9 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
                 .thenReturn(Optional.empty());
 
-        CredentialConfigException exception = assertThrows(CredentialConfigException.class, () ->
-                credentialConfigurationService.updateCredentialConfiguration("12345678", new CredentialConfigurationDTO()));
+        CredentialConfigException exception = assertThrows(CredentialConfigException.class,
+                () -> credentialConfigurationService.updateCredentialConfiguration("12345678",
+                        new CredentialConfigurationDTO()));
 
         assertEquals("Configuration not found with the provided id: " + "12345678", exception.getMessage());
     }
@@ -250,8 +266,8 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigRepository.findByCredentialConfigKeyId(anyString()))
                 .thenReturn(Optional.empty());
 
-        CredentialConfigException exception = assertThrows(CredentialConfigException.class, () ->
-                credentialConfigurationService.deleteCredentialConfigurationById("12345678"));
+        CredentialConfigException exception = assertThrows(CredentialConfigException.class,
+                () -> credentialConfigurationService.deleteCredentialConfigurationById("12345678"));
 
         assertEquals("Configuration not found with the provided id: 12345678", exception.getMessage());
     }
@@ -298,12 +314,12 @@ public class CredentialConfigurationServiceImplTest {
         dto.setCredentialFormat("ldp_vc");
         when(credentialConfigMapper.toDto(config)).thenReturn(dto);
 
-
         CredentialIssuerMetadataDTO result = credentialConfigurationService.fetchCredentialIssuerMetadata("latest");
 
         Assert.assertNotNull(result);
         Assert.assertTrue(result.getCredentialConfigurationSupportedDTO().containsKey("test-credential"));
-        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("test-credential");
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO()
+                .get("test-credential");
         Assert.assertEquals(List.of("ES256"), supportedDTO.getCredentialSigningAlgValuesSupported());
     }
 
@@ -327,7 +343,8 @@ public class CredentialConfigurationServiceImplTest {
 
         Assert.assertNotNull(result);
         Assert.assertTrue(result.getCredentialConfigurationSupportedDTO().containsKey("sdjwt-credential"));
-        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("sdjwt-credential");
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO()
+                .get("sdjwt-credential");
         Assert.assertEquals(List.of("ES256"), supportedDTO.getCredentialSigningAlgValuesSupported());
     }
 
@@ -367,9 +384,8 @@ public class CredentialConfigurationServiceImplTest {
 
         // Call with specific version
 
-        CertifyException ex = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.fetchCredentialIssuerMetadata("unsupported_version")
-        );
+        CertifyException ex = assertThrows(CertifyException.class,
+                () -> credentialConfigurationService.fetchCredentialIssuerMetadata("unsupported_version"));
         assertEquals("Unsupported version: unsupported_version", ex.getMessage());
     }
 
@@ -404,7 +420,8 @@ public class CredentialConfigurationServiceImplTest {
 
         mdocConfig.setStatus("active");
         mdocConfig.setCredentialFormat("mso_mdoc");
-        mdocConfig.setMsoMdocClaims(Map.of("firstName", Map.of( "First Name", new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test","en"))))));
+        mdocConfig.setMsoMdocClaims(Map.of("firstName", Map.of("First Name",
+                new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test", "en"))))));
         mdocConfig.setDocType("docType1");
 
         List<CredentialConfig> credentialConfigList = List.of(mdocConfig);
@@ -415,7 +432,8 @@ public class CredentialConfigurationServiceImplTest {
         mdocDTO.setCredentialFormat("mso_mdoc");
         mdocDTO.setCredentialConfigKeyId("mdoc-credential");
         mdocDTO.setScope("mdoc_scope");
-        mdocDTO.setMsoMdocClaims(Map.of("firstName", Map.of( "First Name", new ClaimsDisplayFieldsConfigDTO(List.of(new ClaimsDisplayFieldsConfigDTO.Display("Test","en"))))));
+        mdocDTO.setMsoMdocClaims(Map.of("firstName", Map.of("First Name",
+                new ClaimsDisplayFieldsConfigDTO(List.of(new ClaimsDisplayFieldsConfigDTO.Display("Test", "en"))))));
         mdocDTO.setDocType("docType1");
 
         when(credentialConfigMapper.toDto(mdocConfig)).thenReturn(mdocDTO);
@@ -426,9 +444,15 @@ public class CredentialConfigurationServiceImplTest {
         // Verify MSO_MDOC configuration
         Assert.assertNotNull(result.getCredentialConfigurationSupportedDTO());
         Assert.assertEquals(1, result.getCredentialConfigurationSupportedDTO().size());
-        Assert.assertEquals(Map.of("firstName", Map.of( "First Name", new ClaimsDisplayFieldsConfigs(List.of(new ClaimsDisplayFieldsConfigs.Display("Test","en"))))), result.getCredentialConfigurationSupportedDTO().get("mdoc-credential").getClaims());
+        Assert.assertEquals(
+                Map.of("firstName",
+                        Map.of("First Name",
+                                new ClaimsDisplayFieldsConfigs(
+                                        List.of(new ClaimsDisplayFieldsConfigs.Display("Test", "en"))))),
+                result.getCredentialConfigurationSupportedDTO().get("mdoc-credential").getClaims());
 
-        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO().get("mdoc-credential");
+        CredentialConfigurationSupportedDTO supportedDTO = result.getCredentialConfigurationSupportedDTO()
+                .get("mdoc-credential");
         Assert.assertNotNull(supportedDTO);
         Assert.assertEquals("mso_mdoc", supportedDTO.getFormat());
         Assert.assertNotNull(supportedDTO.getClaims());
@@ -439,7 +463,7 @@ public class CredentialConfigurationServiceImplTest {
     // Add these methods to CredentialConfigurationServiceImplTest
 
     @Test
-    public void addNewCredentialConfig_MsoMdoc_Success(){
+    public void addNewCredentialConfig_MsoMdoc_Success() {
         CredentialConfig mdocConfig = new CredentialConfig();
         mdocConfig.setConfigId(UUID.randomUUID().toString());
         mdocConfig.setCredentialConfigKeyId("mdoc-credential");
@@ -487,7 +511,6 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(sdJwtConfig);
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(sdJwtConfig);
 
-
         CredentialConfigResponse response = credentialConfigurationService.addCredentialConfiguration(sdJwtDTO);
 
         Assert.assertNotNull(response);
@@ -502,10 +525,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
-            assertEquals("Context, credentialType and signatureCryptoSuite are mandatory for ldp_vc format", ex.getMessage());
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
+            assertEquals("Context, credentialType and signatureCryptoSuite are mandatory for ldp_vc format",
+                    ex.getMessage());
         }
     }
 
@@ -517,9 +540,8 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Configuration already exists for the given context and credentialType", ex.getMessage());
         }
     }
@@ -531,9 +553,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
             mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Doctype and signatureCryptoSuite fields are mandatory for mso_mdoc format", ex.getMessage());
         }
     }
@@ -546,9 +567,8 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
             mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> MsoMdocCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Configuration already exists for the given doctype", ex.getMessage());
         }
     }
@@ -560,9 +580,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
             mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Vct and signatureAlgo fields are mandatory for vc+sd-jwt format", ex.getMessage());
         }
     }
@@ -575,9 +594,8 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
             mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> SdJwtCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Configuration already exists for the given vct", ex.getMessage());
         }
     }
@@ -592,9 +610,8 @@ public class CredentialConfigurationServiceImplTest {
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
             mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(false);
-            CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-            );
+            CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                    .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
             assertEquals("Unsupported signature crypto suite: test-rdfc-2019", ex.getMessage());
         }
     }
@@ -605,10 +622,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setCredentialFormat("ldp_vc");
         dto.setVcTemplate("test_template");
         dto.setCredentialStatusPurposes(List.of("purpose1", "purpose2"));
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1"));
-        CertifyException ex = assertThrows(CertifyException.class, () ->
-                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-        );
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
+                List.of("purpose1"));
+        CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
         assertEquals("Multiple credential status purposes are not currently supported.", ex.getMessage());
     }
 
@@ -618,10 +635,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setCredentialFormat("ldp_vc");
         dto.setVcTemplate("test_template");
         dto.setCredentialStatusPurposes(List.of("invalid_purpose"));
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
-        CertifyException ex = assertThrows(CertifyException.class, () ->
-                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
-        );
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
+                List.of("purpose1", "purpose2"));
+        CertifyException ex = assertThrows(CertifyException.class, () -> ReflectionTestUtils
+                .invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true));
         assertEquals("Invalid credential status purposes. Allowed values are: [purpose1, purpose2]", ex.getMessage());
     }
 
@@ -637,10 +654,12 @@ public class CredentialConfigurationServiceImplTest {
         dto.setSignatureAlgo("EdDSA");
         dto.setKeyManagerAppId("TEST2019");
         dto.setKeyManagerRefId("TEST2019-REF");
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
+                List.of("purpose1", "purpose2"));
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto,
+                    true);
         }
     }
 
@@ -656,10 +675,12 @@ public class CredentialConfigurationServiceImplTest {
         dto.setSignatureAlgo("EdDSA");
         dto.setKeyManagerAppId("TEST2019");
         dto.setKeyManagerRefId("TEST2019-REF");
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
+                List.of("purpose1", "purpose2"));
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto,
+                    true);
         }
     }
 
@@ -675,10 +696,12 @@ public class CredentialConfigurationServiceImplTest {
         dto.setSignatureAlgo("EdDSA");
         dto.setKeyManagerAppId("TEST2019");
         dto.setKeyManagerRefId("TEST2019-REF");
-        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
+        ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes",
+                List.of("purpose1", "purpose2"));
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
             mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto,
+                    true);
         }
     }
 
@@ -693,10 +716,10 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
 
         // Act & Assert
-        CertifyException exception = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.addCredentialConfiguration(dto)
-        );
-        assertEquals("No key chooser configuration found for the signatureAlgo: RsaSignature2018", exception.getMessage());
+        CertifyException exception = assertThrows(CertifyException.class,
+                () -> credentialConfigurationService.addCredentialConfiguration(dto));
+        assertEquals("No key chooser configuration found for the signatureAlgo: RsaSignature2018",
+                exception.getMessage());
     }
 
     @Test
@@ -712,9 +735,8 @@ public class CredentialConfigurationServiceImplTest {
         dto.setVcTemplate("test_template");
 
         // Act & Assert
-        CertifyException exception = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.addCredentialConfiguration(dto)
-        );
+        CertifyException exception = assertThrows(CertifyException.class,
+                () -> credentialConfigurationService.addCredentialConfiguration(dto));
         assertEquals("No matching appId and refId found in the key chooser list.", exception.getMessage());
     }
 }
